# StrOtdTest

./: .env-non-dev  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
docker/: app.sh
strotd/: config.py  database.py  exceptions.py  main.py
strotd/categories/: dao.py  models.py  routers.py  schemas.py
strotd/dao/: base.py
strotd/migrations/: env.py
strotd/migrations/versions/: 4a2202978cee_.py
strotd/products/: dao.py  models.py  routers.py  schemas.py
tests/: conftest.py  mock_cats.json  mock_products.json
tests/unit_tests/test_categories/: dao_cat_tests.py
tests/unit_tests/test_products/: dao_prod_tests.py
